--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,5 +1,5 @@
-@import url('https://fonts.googleapis.com/css2?family=Nanum+Gothic:wght@400;700;800&display=swap');
-* { font-family: 'Nanum Gothic', sans-serif; box-sizing: border-box; outline:none;}
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@400;500;700&display=swap');
+* { font-family: 'Noto Sans KR', sans-serif; box-sizing: border-box; outline:none;}
 html { font-size: 12px; color : #212121;}
 body { padding:0; margin: 0;}
 ul { list-style: none; padding: 0; margin: 0;}
@@ -17,7 +17,7 @@ input[type='email'] {
 
 a{ text-decoration: none; color:#212121;}
 
-#main_wrap { padding: 10px; }
+#main_wrap:not(.swiper) { }
 
 /** 버튼 공통 */
 .submit_btn { background-color: black; color: #ffffff; height:45px; width: 250px; display: block;
@@ -26,3 +26,75 @@ margin: 20px auto; border:0; border-radius: 7px; cursor: pointer;}
 .btn1, .btn2 { background-color: red; color:#ffffff; padding:5px 15px; font-size: 12px; cursor: pointer;
 border-radius: 3px; border:0;}
 .btn2 { background-color: orange; color:#212121;}
+
+/* 메인 헤더 공통 */
+.nav  {  background-color: 
+    #dedcd7; padding : 10px;}
+.nav .logo {float:left; width: calc( 100% / 2 + 70px); text-align: right;
+font-size: 20px;}
+.nav .info {float: right;  line-height: 30px;}
+.nav .info a { padding:5px;}
+.nav:after{ clear:both; content: ""; display: block;}
+.box.info a { font-size:18px;}
+
+/* swiper 메인 배너영역 S */
+.swiper { height: 700px;}
+.swiper-container{
+    height:700px;
+   
+    
+}
+
+.swiper-container img{
+    height:700px;
+    width:100%;
+}
+
+.swiper-container .swiper-button-next,
+.swiper-container .swiper-button-prev{
+    color:#dedcd7;
+}
+
+.swiper-container .swiper-pagination-bullet{
+    width:12px;
+    height:12px;
+    
+    box-shadow: 2px 2px 3px white;
+    
+}
+.swiper-container .swiper-pagination-bullet-active{
+    width:70px;
+    border-radius: 20px;
+    background-color:#dedcd7;
+}
+/* swiper 메인 배너영역 E */
+
+
+/** 메인 하단 메뉴 */
+.footer_info  { background-color: #dedcd7; margin-top: 250px;
+}
+.footer_info .box { float:left; width: 50%; padding: 8px 0;}
+.footer_info:after { clear:left; content:""; display:block;}
+
+.box.cs_info  { text-align:center; margin-top:10px;}
+
+
+.box.cs_info .title1 { font-weight:600;}
+.box.cs_info .title2 { font-weight:500; margin-bottom:5px;}
+.box.cs_info .title3 { font-weight:300; font-size:14px;}
+
+.company_info { font-size:14px }
+
+/* 메인메뉴 */
+.main_menu { text-align: right;}
+.main_menu li { display: inline-block; padding: 22px; }
+.main_menu li:hover{ background-color: #dedcd7; color:black; cursor: pointer;}
+
+
+
+/* 회원가입 / 로그인 폼 */
+#join_form { width: 500px; margin:0 auto; margin-top:50px; 
+    border: 2px solid #dedcd7; padding: 20px;}
+.login_method { text-align: center;}
+.links { text-align: center;}
+#join_form dd {width:80%; padding-bottom: 10px;}
