--- a/views/member/form.html
+++ b/views/member/form.html
@@ -2,7 +2,7 @@
 
 <!-- 회원 가입, 수정 양식 -->
 {% block content %}
-<form method='post' action='/member/join' target='ifrmHidden' autocomplete='off'>
+<form id = "join_form" method='post' action='/member/join' target='ifrmHidden' autocomplete='off'>
 	{% if naverProfile.id %}
 	<h1>네이버 아이디로 회원 가입</h1>
 	{% endif %}
@@ -44,6 +44,6 @@
 			<input type='text' name='cellPhone'>
 		</dd>
 	</dl>
-	<input type='submit' value='회원가입'>
+	<input type='submit' value='회원가입' class="submit_btn">
 </form>
 {% endblock %}
