--- a/views/member/login.html
+++ b/views/member/login.html
@@ -1,6 +1,6 @@
 {% extends '../layout.html' %}
 {% block content %}
-<form method='post' action='/member/login' autocomplete='off' target='ifrmHidden'>
+<form id ="join_form" method='post' action='/member/login' autocomplete='off' target='ifrmHidden'>
 	<dl>
 		<dt>아이디</dt>
 		<dd>
@@ -17,11 +17,14 @@
 		<a href='/member/find_id'>아이디 찾기</a>
 		<a href='/member/find_pw'>비밀번호 찾기</a>
 	</div>
+	<div class="login_method">
+	<input type='submit' value='로그인' class="submit_btn">
 	<div class='sns_btns'>
 	{% if naverLoginUrl %}
 		<a href='{{ naverLoginUrl }}'><img src='/img/sns_login/naver.png' height='45'></a>
 	{% endif %}
 	</div>
-	<input type='submit' value='로그인'>
+	
+	</div>
 </form>
 {% endblock %}
