--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,7 @@ input[type='email'] {
 
 a{ text-decoration: none; color:#212121;}
 
-#main_wrap:not(.swiper) { }
+
 
 /** 버튼 공통 */
 .submit_btn { background-color: black; color: #ffffff; height:45px; width: 250px; display: block;
@@ -71,8 +71,7 @@ font-size: 20px;}
 
 
 /** 메인 하단 메뉴 */
-.footer_info  { background-color: #dedcd7; margin-top: 250px;
-}
+.footer_info  { background-color: #dedcd7;  margin-top: 300px;}
 .footer_info .box { float:left; width: 50%; padding: 8px 0;}
 .footer_info:after { clear:left; content:""; display:block;}
 
@@ -85,6 +84,7 @@ font-size: 20px;}
 
 .company_info { font-size:14px }
 
+
 /* 메인메뉴 */
 .main_menu { text-align: right;}
 .main_menu li { display: inline-block; padding: 22px; }
@@ -95,6 +95,23 @@ font-size: 20px;}
 /* 회원가입 / 로그인 폼 */
 #join_form { width: 500px; margin:0 auto; margin-top:50px; 
     border: 2px solid #dedcd7; padding: 20px;}
+#join_form h1 {text-align: center;}
 .login_method { text-align: center;}
 .links { text-align: center;}
 #join_form dd {width:80%; padding-bottom: 10px;}
+
+
+/* quick_bar */
+.quick_bar { border:1px solid black; width:120px; height: 120px; background-color: #dedcd7; z-index: 20;
+    position: fixed; top:120px; right:8px;}
+    .quick_bar li a { background-color: white; display: block; width:100px; height: 40px; 
+    margin-bottom: 3px; text-align: center; line-height: 38px; color:black; margin:10px auto;
+     z-index: 31; font-weight: 500; font-size: 16px;}
+     .quick_bar li a:hover{ background-color: black; color:white;}
+
+/* 반응형 */
+
+@media (max-width : 800px) {
+    .main_menu li {display:block; text-align: center;}
+}
+
