--- a/views/layout.html
+++ b/views/layout.html
@@ -17,6 +17,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src ="/js/ckeditor/ckeditor.js"></script>
     <script type ="text/babel" src ="/js/common.js"></script>
+    <script src ="/socket.io/socket.io.js"></script>
     {% if addScript %}  
     {% for script in addScript %}  
     <script type ="text/babel" src = "/js/{{ script }}.js"></script>
