--- a/views/member/login.html
+++ b/views/member/login.html
@@ -1,6 +1,7 @@
 {% extends '../layout.html' %}
 {% block content %}
 <form id ="join_form" method='post' action='/member/login' autocomplete='off' target='ifrmHidden'>
+	<h1>LOGIN</h1>
 	<dl>
 		<dt>아이디</dt>
 		<dd>
