--- a/views/main/index.html
+++ b/views/main/index.html
@@ -34,4 +34,12 @@
  </section>
   <!-- swiper 영역 E -->
 
+   <!-- 예약/ 1대1 문의 S -->
+<div class="quick_bar">
+  <ul>
+  <li><a href="/chat" class="go_reserve">동행 구하기</a></li>
+  <li><a href="" class ="qna">1:1문의</a></li>
+</ul>
+</div>
+  <!-- 예약/ 1대1 문의 E -->
 {% endblock %}  
