--- a/views/board/view.html
+++ b/views/board/view.html
@@ -1,5 +1,6 @@
 {% extends "../layout.html" %}  
 
-{% block content %}  
+{% block content %} 
+<div class="board_nm">{{ config.boardNm }}</div> 
 {% include config.skinPath.view %}  
 {% endblock %}  
