--- a/views/outline/footer/_main.html
+++ b/views/outline/footer/_main.html
@@ -15,7 +15,7 @@
                 법인명(상호) :(주) Yoonshotel 대표 : 윤정후<br>
                 개인정보관리자: 윤정후 주소: 인천 계양구 안남로 583번길<br>
                 대표번호 : <strong>1688-7531</strong> 팩스번호 : 032-111-1111 메일 : wjdgn9956@naver.com<br>
-                <br>&copy; <strong>Yoonshotel</strong> ALL RIGHTS RESERVED.  
+                <br>&copy; <strong>YOON'S TOUR</strong> ALL RIGHTS RESERVED.  
             </div>
 
  </div>
