--- a/public/css/chat.css
+++ b/public/css/chat.css
@@ -18,8 +18,7 @@ border-radius: 5px;}
 
 .chat li.other .userNm { background-color: orange;}
 .btn { background-color: #d5d5d5; color:black; border:1px solid #d5d5d5;
-width:100px; height: 40px; border-radius: 5px; cursor: pointer; margin:0 auto; display: block;}
-
+width:100px; height: 40px; border-radius: 5px; cursor: pointer; margin:0 auto; display: block;  margin-top: 10px;}
 .btn:hover { color:white; background-color: black;}
 .title_chat { text-align: center; font-size: 16px; font-weight: 600; margin-bottom: 30px; }
 #form { width: 500px; margin: 100px auto; border :3px solid #d5d5d5; 
