--- a/public/css/style.css
+++ b/public/css/style.css
@@ -11,7 +11,8 @@ dd { display: table-cell; vertical-align: middle;}
 input[type='text'],
 input[type='number'],
 input[type='password'],
-input[type='email'] {
+input[type='email'],
+select {
     width: 100%; height: 40px; border:1px solid #d5d5d5; border-radius: 5px; padding: 0 10px;
 }
 
@@ -23,9 +24,16 @@ a{ text-decoration: none; color:#212121;}
 .submit_btn { background-color: black; color: #ffffff; height:45px; width: 250px; display: block;
 margin: 20px auto; border:0; border-radius: 7px; cursor: pointer;}
 
-.btn1, .btn2 { background-color: red; color:#ffffff; padding:5px 15px; font-size: 12px; cursor: pointer;
+.btn1, .btn2 { background-color: black; color:#ffffff; padding:5px 15px; font-size: 12px; cursor: pointer;
 border-radius: 3px; border:0;}
+
 .btn2 { background-color: orange; color:#212121;}
+
+/* 페이징 */
+.paginator { text-align: center; padding: 20px 0; }
+.paginator a { padding:5px 10px; border:1px solid #212121; font-size:11px;
+border-radius: 3px; margin: 0 2px;}
+.paginator a.paginator-current { background-color: #212121; color:#ffffff;}
 
 /* 메인 헤더 공통 */
 .nav  {  background-color: 
