--- a/views/board/form.html
+++ b/views/board/form.html
@@ -1,9 +1,10 @@
 {% extends '../layout.html' %}
 {% block content %}
-<form name='frmBoard' method='post' action="/board/{{ config.id }}{{ '?_method=PATCH' if idx}}" target='ifrmHidden' autocomplete='off' enctype="multipart/form-data">
- {% if idx %} 
- <input type="hidden" name ="idx" value ="{{ idx }}">
- {% endif %} 
+<div class="board_nm">{{ config.boardNm }}</div>
+<form name='frmBoard' method='post' action="/board/{{ config.id }}{{ '?_method=PATCH' if idx }}" target='ifrmHidden' autocomplete='off'>
+{% if idx %}
+<input type='hidden' name='idx' value='{{ idx }}'>
+{% endif %}
 {% include config.skinPath.form %}
 </form>
 {% endblock %}
