--- a/views/board/skins/default/_form.html
+++ b/views/board/skins/default/_form.html
@@ -1,4 +1,17 @@
 <div class='board_default form'>
+	{% if config.categories.length > 0 %}  
+	 <dl>
+		 <dt>분류</dt>
+		 <dd>
+			 <select name="category">
+				 <option value="">선택하세요</option>
+				 {% for item in config.categories %}  
+				 <option value="{{ item }}"{% if item == category %} selected{% endif %}>{{ item }}</option>
+				 {% endfor %}  
+			 </select>
+		 </dd>
+	 </dl>
+	{% endif %}
 	<dl>
 		<dt>제목</dt>
 		<dd>
@@ -20,6 +33,6 @@
 	</dl>
 	{% endif %}
 	<textarea name='contents' id='contents'>{{ contents | safe }}</textarea>
-	<input type='submit' value='작성하기' class='submit_btn'>
+	<input type='submit' value='{{ '수정' if idx else '작성'}}하기' class='submit_btn'>
 </div>
 <!--// board_default -->
