--- a/views/member/form.html
+++ b/views/member/form.html
@@ -45,6 +45,12 @@
 			<input type='text' name='cellPhone'>
 		</dd>
 	</dl>
+	<dl>
+        <dt>주소</dt>
+        <dd>
+            <input type="text" name ="address" class="address" value = "{{ address }}" readonly>
+        </dd>
+    </dl>
 	<input type='submit' value='회원가입' class="submit_btn">
 </form>
 {% endblock %}
