--- a/views/main/index.html
+++ b/views/main/index.html
@@ -17,13 +17,13 @@
     <div class="swiper-container">
         <div class="swiper-wrapper">
           <div class="swiper-slide banner">
-              <img src="img/hotel1.jpg" alt="">
+              <img src="img/tour1.jpg" alt="">
           </div>
           <div class="swiper-slide banner">
-            <img src="img/hotel2.jpg" alt="">
+            <img src="img/tour2.jpg" alt="">
           </div>
           <div class="swiper-slide banner">
-            <img src="img/hotel3.jpg" alt="">
+            <img src="img/tour3.jpg" alt="">
           </div>
         </div>
         <!-- Add Arrows -->
