--- a/public/css/board.css
+++ b/public/css/board.css
@@ -1,5 +1,5 @@
 /* 게시판 공통 */
-.board_nm { font-size:16px; font-weight: bold; margin-bottom: 20px;}
+.board_nm { font-size:20px; font-weight: bold; margin-bottom: 20px; text-align: center;}
 .no_post { text-align: center; padding:100px 0; font-size: 18px; font-weight: bold;}
 
 /* default category_tab */
@@ -35,4 +35,20 @@ text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
 .board_default .post_list > li .post_info { float:right; padding:10px; width:300px; text-align: right;}
 .board_default .post_list > li:after { display: block; content: ""; clear: both;}
 .board_default.list {position: relative;}
-.board_default .write_btn {position: absolute; right : 0; top: -35px; }
+.board_default .write_btn {position: absolute; right : 50px; top: -35px; }
+
+
+/* board_main  메인 영역*/
+.board_main { margin-top: 100px;}
+.board_main .box { float:left; width: calc( 100%/ 5);}
+.board_main:after{clear:left; content: ""; display: block;}
+
+
+.board_main .box .inner{
+    overflow: hidden;
+}
+.board_main .box img { width: 100%; height:300px; display: block; transition: 1.3s;}
+.board_main .box img:hover {
+    transform:scale(1.2);
+}
+.board_main .title { font-size: 17px; font-weight: 500px; margin-top: 10px;}
