--- a/views/outline/header/_main.html
+++ b/views/outline/header/_main.html
@@ -7,11 +7,12 @@
    {% if isLogin %} 
    {{ member.memId}}님 로그인..
     
-   <a href="/admin">관리자 메뉴</a>      
-   <a href="/board/list"><i class="xi-paper-o"></i>게시판</a>
+   <a href="/admin">관리자 메뉴</a>
+   <a href="/board"><i class="xi-paper-o"></i>게시판</a>      
    <a href="/member/mypage"><i class ="xi-home"></i>마이페이지</a>
    <a href="/member/logout"><i class ="xi-log-out"></i>로그아웃</a>
    {% else %}
+   <a href="/board"><i class="xi-paper-o"></i>게시판</a>
    <a href="/member/login"><i class ="xi-log-in"></i>로그인</a>
    <a href="/member/join"><i class ="xi-log-out"></i>회원가입</a>
        
