--- a/public/css/board.css
+++ b/public/css/board.css
@@ -1,12 +1,16 @@
 /* 게시판 공통 */
 .board_nm { font-size:20px; font-weight: bold; margin-bottom: 20px; text-align: center;}
 .no_post { text-align: center; padding:100px 0; font-size: 18px; font-weight: bold;}
-
+.post_list_bottom { margin:30px 0;}
 /* default category_tab */
 .board_default .category_tab { text-align: center; margin-bottom: 20px; font-weight: bold;}
 .board_default .category_tab .tab { padding:10px 20px; border:1px solid #212121;
 margin:0 3px; border-radius: 20px;}
 .board_default .category_tab .tab.on { background-color: #212121; color:#ffffff;
+}
+
+@media (max-width : 700px) {
+    .board_default .category_tab .tab { display: block; width:250px; margin:5px auto;}
 }
 
 
@@ -35,11 +39,11 @@ text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
 .board_default .post_list > li .post_info { float:right; padding:10px; width:300px; text-align: right;}
 .board_default .post_list > li:after { display: block; content: ""; clear: both;}
 .board_default.list {position: relative;}
-.board_default .write_btn {position: absolute; right : 50px; top: -35px; }
+.board_default .write_btn {position: absolute; right : 50px; top: 10px; }
 
 
 /* board_main  메인 영역*/
-.board_main { margin-top: 100px; }
+.board_main { margin-top: 100px;}
 .board_main .box {float:left; width: calc( 100%/ 5);}
 .board_main:after{clear:left; content: ""; display: block;}
 
@@ -62,3 +66,32 @@ text-overflow: ellipsis; white-space: nowrap; overflow: hidden;}
     transform:scale(1.2);
 }
 .board_main .title { text-align: center; font-size:17px; margin-top:20px; font-weight: 16px; }
+
+
+@media (max-width: 850px) {
+    .board_main .box { width: calc(100% / 2);}
+}
+
+.board_default.comment { border: 1px solid #d5d5d5; padding: 10px;}
+/* default/_comment_html */
+.board_default.comment .comment_info input[type='text'],
+.board_default.comment .comment_info input[type='password'] { width:100px; height:25px;}
+.board_default.comment .comment_info { margin-bottom: 5px;}
+.board_default.comment textarea { border: 1px solid #212121; background-color: #f8f8f8;
+padding:10px; resize: none; width: calc(100% - 130px); margin-right: 10px; display: block; float: left; height: 100px;}
+.board_default.comment .write_comment { float:right; width:120px; height: 100px; display: block; 
+cursor: pointer; background-color: #212121; color:white;}
+.board_default.comment .comment_form:after {clear:both; content: ""; display: block;}
+
+.board_default .comment_list { margin: 25px 0;}
+.board_default .comment_wrap { border:1px solid #d5d5d5; padding:10px 10px 5px; border-radius: 5px;
+margin-bottom: 10px;}
+.board_default .comment_wrap .top_box { background-color: #f8f8f8; padding:10px; margin-bottom: 10px;}
+.board_default .comment_wrap .top_box .left { float:left;}
+.board_default .comment_wrap .top_box .right { float:right;}
+.board_default .comment_wrap .top_box::after { clear:both; content: ""; display: block;}
+.board_default .comment_wrap .comment {margin-bottom: 10px;}
+.board_default .comment_wrap .btns { text-align: right;}
+
+.board_default.comment_form textarea { width: 100%; border:1px solid #d5d5d5; height:160px;
+resize: none; padding:10px; border-radius: 5px; margin-top:10px;}
