--- a/views/layout.html
+++ b/views/layout.html
@@ -18,6 +18,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
     <script src ="/js/ckeditor/ckeditor.js"></script>
+    <script type ="text/babel" src ="/js/layer.js"></script>
     <script type ="text/babel" src ="/js/common.js"></script>
     <script src ="/socket.io/socket.io.js"></script>
     {% if addScript %}  
@@ -53,6 +54,6 @@
     {% include "outline/footer/_main.html" %} 
     {% endblock %}  
     </footer>
-    <iframe name ="ifrmHidden" width = "100%"; height: "500"  frameborder="0"></iframe>
+    <iframe name ="ifrmHidden" width = "100%" height="500"  frameborder="0"></iframe>
 </body>
 </html>
