--- a/views/board/skins/default/_view.html
+++ b/views/board/skins/default/_view.html
@@ -10,7 +10,7 @@
 		{{ contents | safe }}
 	</div>
 	<div class='btns'>
-		<a href='/board/{{ id }}' class='btn1'>글 쓰기</a>
+		<a href='/board/{{ id }}' class='btn1'>글 쓰기dd</a>
 		{% if isWritable %}
 		<a href='/board/update/{{ idx }}' class='btn1'>글 수정</a>
 		{% endif %}
