--- a/views/layout.html
+++ b/views/layout.html
@@ -28,7 +28,7 @@
     {% endif %}  
     {% block script %}  
     {% endblock %}  
-    <title>{% if pageTitle %} {{ pageTitle }} - {% endif %}연희직업전문학교</title>
+    <title>{% if pageTitle %} {{ pageTitle }} - {% endif %}YOON'S TOUR</title>
 </head>
 <body{% if bodyClass %} class ="body_{{ bodyClass }}" {% endif %}>
 
