--- a/public/css/style.css
+++ b/public/css/style.css
@@ -17,7 +17,10 @@ select {
 }
 
 a{ text-decoration: none; color:#212121;}
-
+/* 여백 */
+.mt10 { margin-top:10px !important;}
+.mt15 { margin-top:15px !important;}
+.mt20 { margin-top: 20px !important;}
 
 
 /** 버튼 공통 */
