--- a/views/board/skins/default/_list.html
+++ b/views/board/skins/default/_list.html
@@ -1,24 +1,29 @@
 <!-- Default 게시글 목록 -->
 <div class='board_default list'>
-    {% if config.categories.length > 0 %}   
-    <div class="category_tab">
-        <a href="/board/list/{{ config.id }}" class ="tab{{ ' on' if not category }}">전체</a>
-        {% for item in config.categories %}  
-        <a href="/board/list/{{ config.id }}?category={{ item }}" 
-        class ="tab{% if category == item %} on{% endif %}">{{ item }}</a>
-
-        {% endfor %}  
-    </div>
-    {% endif %} 
-    <a href="/board/{{ config.id }}" class ="btn1 write_btn">글 쓰기</a>
+	{% if config.categories.length > 0 %}
+	<div class='category_tab'>
+		<a href='/board/list/{{ config.id }}' class="tab{{ ' on' if not category }}">전체</a>
+		{% for item in config.categories %}
+			<a href='/board/list/{{ config.id }}?category={{ item }}' class='tab{% if category == item %} on{% endif %}'>{{ item }}</a>
+		{% endfor %}
+	</div>
+	{% endif %}
+	<a href='/board/{{ config.id }}' class='btn1 write_btn'>글쓰기</a>
 	<ul class='post_list'>
 	{% if list.length > 0 %} 
 		{% for item in list %}
 			<li>
-				<a href='/board/view/{{ item.idx }}' class='title'>{{ item.subject }}</a>
+				<a href='/board/view/{{ item.idx }}' class='title'>
+					{{ item.subject }}
+					{% if item.commentCount %}({{ item.commentCount }}){% endif %}
+					{% if item.isNew %}<img src='/img/new.png'>{% endif %}
+				</a>
 				<div class='post_info'>
 					<span class='poster'>{{ item.poster }}{% if item.memNo > 0 %}({{ item.memId }}){% endif %}</span>
 					<span class='date'>{{ item.regDt }}</span>
+					{% if item.viewCount > 0 %}
+					<span class='hit'>조회수 : {{ item.viewCountStr }}</span>
+					{% endif %}
 				</div>
 			</li>
 		{% endfor %}
