--- a/views/member/form.html
+++ b/views/member/form.html
@@ -9,9 +9,15 @@
 	<h1>JOIN</h1>
 	<dl>
 		<dt>아이디</dt>
+		{% if isLogin %}  
+		<dd>
+			<input type='text' name='memId' value ="{{ member.memId}}" readonly>
+		</dd>
+		{% else %}
 		<dd>
 			<input type='text' name='memId'>
 		</dd>
+		{% endif %}
 	</dl>
     {% if not naverProfile.id %}  
 	<dl>
@@ -30,27 +36,27 @@
 	<dl>
 		<dt>회원명</dt>
 		<dd>
-			<input type='text' name='memNm' value='{{ memNm }}'>
+			<input type='text' name='memNm' value='{{ member.memNm }}'>
 		</dd>
 	</dl>
 	<dl>
 		<dt>이메일</dt>
 		<dd>
-			<input type='email' name='email' value='{{ email }}'>
+			<input type='email' name='email' value='{{ member.email }}'>
 		</dd>
 	</dl>
 	<dl>
 		<dt>휴대전화번호</dt>
 		<dd>
-			<input type='text' name='cellPhone'>
+			<input type='text' name='cellPhone' value="{{ member.cellPhone }}">
 		</dd>
 	</dl>
 	<dl>
         <dt>주소</dt>
         <dd>
-            <input type="text" name ="address" class="address" value = "{{ address }}" readonly>
+            <input type="text" name ="address" class="address" value = "{{ member.address }}" readonly>
         </dd>
     </dl>
-	<input type='submit' value='회원가입' class="submit_btn">
+	<input type='submit' value="{{ '회원정보 수정' if isLogin else '회원가입' }}" class="submit_btn">
 </form>
 {% endblock %}
