--- a/views/admin/outline/header/_main.html
+++ b/views/admin/outline/header/_main.html
@@ -9,4 +9,10 @@
     <li class = "menu{% if menuCode == 'board' %} on{% endif %}">
         <a href="/admin/board">게시판 관리</a>
     </li>
+    <li class ="menu{% if menuCode == 'travelGoods' %} on{% endif %}">
+        <a href="/admin/travel">여행상품 관리</a>
+    </li>
+    <li class ="menu{% if menuCode == 'reservation' %} on{% endif %}">
+        <a href="/admin/reservation">여행예약관리</a>
+    </li>
 </ul>
