--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -35,16 +35,27 @@ textarea { border: 1px solid #d5d5d5; min-height: 150px; resize: none; border-ra
 #main_wrap { padding: 15px 10px; }
 
 
+
 /** 버튼 */
 .submit_btn { background-color: #212121; color: #ffffff; height: 45px; line-height: 45px; cursor: pointer; border-radius: 7px; width: 250px; margin: 20px auto; border: 0; display: block; }
 .btn1, .btn2 { display: inline-block; padding: 5px 15px; background-color: blue; color: #ffffff; border-radius: 5px; font-size: 11px; cursor: pointer; border:0;}
 .btn2 { background-color: red; }
 
-
 @media (max-width:700px) {
     .btn1 { width:80px; margin-bottom: 5px;}
     .btn2 { width:80px;}
 }
+
+
+/** 팝업 공통 */
+.popup_tit { font-size: 17px; font-weight: bold; padding-bottom: 15px; margin-bottom: 20px; border-bottom: 1px solid #212121; }
+
+/*  업로드 이미지  */
+.uploaded_images .images { display: inline-block; width:50px; height: 50px; position: relative; margin:3px;}
+.uploaded_images .images div { width:48px; height: 48px;}
+.uploaded_images .remove { position: absolute; top:0; right:0; z-index: 10; padding:3px; background-color: #212121;
+color:#ffffff; cursor: pointer;}
+
 
 
 
