--- a/views/admin/layout.html
+++ b/views/admin/layout.html
@@ -2,6 +2,7 @@
 <html>
 	<head>
 		<meta charset='utf-8'>
+		<link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
 		<link rel="stylesheet" type="text/css" href="/admin/css/style.css">
 		{% if addCss %}
 		{% for css in addCss %}
@@ -12,6 +13,8 @@
 		{% endblock %}
 		<script src='https://unpkg.com/@babel/standalone/babel.min.js'></script>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
+		<script type='text/babel' src='/js/layer.js'></script>
 		<script type='text/babel' src='/admin/js/common.js'></script>
 		{% if addScript %}
 		{% for script in addScript %}
