--- a/public/css/board.css
+++ b/public/css/board.css
@@ -110,6 +110,7 @@ margin-bottom: 10px;}
 .board_default .comment_wrap .top_box::after { clear:both; content: ""; display: block;}
 .board_default .comment_wrap .comment {margin-bottom: 10px;}
 .board_default .comment_wrap .btns { text-align: right;}
+.board_default.list .hit { font-weight: 700; border: 3px solid#d5d5d5; padding:4px; border-radius: 3px;} 
 
 .board_default.comment_form textarea { width: 100%; border:1px solid #d5d5d5; height:160px;
 resize: none; padding:10px; border-radius: 5px; margin-top:10px;}
