--- a/views/chat_room.html
+++ b/views/chat_room.html
@@ -17,7 +17,7 @@
 
     </ul>
     <div class="chat_box">
-        <input type="text" id ="word" placeholder="메세지를 입력해보세요~">
+        <input type="text" id ="word" placeholder="메세지를 입력 후 엔터키를 누르세요~">
     </div>
     <i class ="xi-image-o" class="upload_photo"></i>
     <a href="/" class ="exit">퇴장하기</a>
