--- a/views/board/main.html
+++ b/views/board/main.html
@@ -6,54 +6,50 @@
 
 {% block content %}  
 <div class="board_main">
-    <div class="box west_europe">
+   
         <a href="/board/list/서유럽">
+          <div class="photo">
             <div class="inner">
-            <img src="img/west_europe.jpg" alt="">
-            </div>
-            <div class="title">서유럽 게시판</div>
-            
+              <img src="img/west_europe.jpg" alt="">
+            </div>  
+          </div>
+            <div class="title">서유럽 게시판</div> 
         </a>
-    </div>
+    
 
-    <div class="box east_europe">
         <a href="/board/list/동유럽">
-            <div class="inner">
-            <img src="img/east_europe.jpg" alt="">
+            <div class="photo">
+              <div class="inner">
+                <img src="img/east_europe.jpg" alt="">
+              </div>  
             </div>
-            <div class="title">동유럽 게시판</div>
-          
-        </a>
-    </div>
+              <div class="title">동유럽 게시판</div> 
+          </a>
 
-    <div class="box north_europe">
-        <a href="/board/list/북유럽">
-            <div class="inner">
-            <img src="img/north_europe.jpg" alt="">
+          <a href="/board/list/북유럽">
+            <div class="photo">
+              <div class="inner">
+                <img src="img/north_europe.jpg" alt="">
+              </div>  
             </div>
-            <div class="title">북유럽 게시판</div>
-            
-        </a>
-    </div>
+              <div class="title">북유럽 게시판</div> 
+          </a>
 
-    <div class="box domestic">
-        <a href="/board/list/국내여행">
-            <div class="inner">
-            <img src="img/domestic.jpg" alt="">
+          <a href="/board/list/동남아시아">
+            <div class="photo">
+              <div class="inner">
+                <img src="img/southeast_asia.jpg" alt="">
+              </div>  
             </div>
-            <div class="title">국내여행 게시판</div>
-           
-        </a>
-    </div>
-
-    <div class="box southeast_asia">
-        <a href="/board/list/동남아시아">
-            <div class="inner">
-            <img src="img/southeast_asia.jpg" alt="">
+              <div class="title">동남아시아 게시판</div> 
+          </a>
+          <a href="/board/list/국내여행">
+            <div class="photo">
+              <div class="inner">
+                <img src="img/domestic.jpg" alt="">
+              </div>  
             </div>
-            <div class="title">동남아시아 게시판</div>
-            
-        </a>
-</div>
+              <div class="title">국내여행 게시판</div> 
+          </a>
 </div>
 {% endblock %}  
