--- a/views/chat_room.html
+++ b/views/chat_room.html
@@ -19,7 +19,7 @@
     <div class="chat_box">
         <input type="text" id ="word" placeholder="메세지를 입력 후 엔터키를 누르세요~">
     </div>
-    <i class ="xi-image-o" class="upload_photo"></i>
+    <i class ="xi-image-o " onclick="layer.popup('/file/upload/', 320, 250)"; class="upload_photo"></i>
     <a href="/" class ="exit">퇴장하기</a>
 </div>
 
