--- a/public/admin/css/style.css
+++ b/public/admin/css/style.css
@@ -56,7 +56,8 @@ textarea { border: 1px solid #d5d5d5; min-height: 150px; resize: none; border-ra
 .uploaded_images .remove { position: absolute; top:0; right:0; z-index: 10; padding:3px; background-color: #212121;
 color:#ffffff; cursor: pointer;}
 
-
+/** datepicker */
+#ui-datepicker-div { z-index: 50 !important; }
 
 
 /** outline/header/_main.html */
@@ -67,3 +68,5 @@ color:#ffffff; cursor: pointer;}
 .main_menu li a:hover,
 .main_menu li.on a { background-color: lightblue; }
 
+/** travel/form.html */
+.datepicker { width: 150px !important; }
