--- a/views/layout.html
+++ b/views/layout.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
     <link rel="stylesheet" href="//cdn.jsdelivr.net/npm/xeicon@2.3.3/xeicon.min.css">
     <link rel="stylesheet" href="/css/style.css">
     {% if addCss %}  
@@ -13,6 +14,7 @@
     {% endif %}  
     {% block style %}  
     {% endblock %}  
+    <script src="https://unpkg.com/swiper/swiper-bundle.min.js"></script>
     <script src="//t1.daumcdn.net/mapjsapi/bundle/postcode/prod/postcode.v2.js"></script>
     <script src ="https://unpkg.com/@babel/standalone/babel.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
@@ -30,7 +32,7 @@
     {% endblock %}  
     <title>{% if pageTitle %} {{ pageTitle }} - {% endif %}YOON'S TOUR</title>
 </head>
-<body{% if bodyClass %} class ="body_{{ bodyClass }}" {% endif %}>
+<body class="{% if bodyClass %}body_{{ bodyClass }}{% endif %}{% if bodyClass2 %} body_{{ bodyClass2 }}{% endif %}">
 
     <header>
     {% block header %}  
@@ -54,6 +56,6 @@
     {% include "outline/footer/_main.html" %} 
     {% endblock %}  
     </footer>
-    <iframe name ="ifrmHidden" width = "100%" height="500"  frameborder="0"></iframe>
+    <iframe name ="ifrmHidden" width = "100%" height="500"  frameborder="0" style="display:none;"></iframe>
 </body>
 </html>
