--- a/views/admin/travel/index.html
+++ b/views/admin/travel/index.html
@@ -6,7 +6,7 @@
 		<tr>
 			<th>상품코드</th>
 			<td width='180'>
-				<input type='text' name='goodsCd'>
+				<input type='text' name='goodsCd' class="product_code">
 			</td>
 			<td width='120'>
 				<span class='btn1 generate_goodsCd'>자동생성</span>
