--- a/views/travel/goods.html
+++ b/views/travel/goods.html
@@ -1,3 +1,4 @@
+  
 {% extends '../layout.html' %}
 {% block content %}
 <div class='travel_goods layout_width'>
@@ -25,6 +26,10 @@
 			{% if shortDescription %}
 				<i class='xi-info-o'></i>
 				{{ shortDescription }}
+			{% endif %}
+			{% if pack.startDate %}
+				{{ ' <br> ' | safe   if shortDescription }}
+				<i class='xi-calendar'></i> 일정 : {{ pack.startDate }} 부터 예약 신청 가능
 			{% endif %}
 			</div>
 			
@@ -77,7 +82,7 @@
 			<div class='price_info'>
 				<div class='target'>성인 1인</div>
 				<div class='price'>
-					<span class='no'>{{ priceAdult.toLocaleString() }}</span>원
+					<span class='no'>{{ priceAdultStr }}</span>원
 				</div>
 			</div>
 			<!--// price_info -->
@@ -96,7 +101,7 @@
 					<dl>
 						<dt>
 							<div class='txt'>성인</div>
-							<div class='price'>{{ priceAdult.toLocaleString() }}원</div>
+							<div class='price'>{{ priceAdultStr }}원</div>
 						</dt>
 						<dd>
 							<div class='goods_cnt_wrap'>
@@ -109,7 +114,7 @@
 					<dl>
 						<dt>
 							<div class='txt'>아동(만 13세 이하)</div>
-							<div class='price'>{{ priceChild.toLocaleString() }}원</div>
+							<div class='price'>{{ priceChildStr }}원</div>
 						</dt>
 						<dd>
 							<div class='goods_cnt_wrap'>
@@ -137,7 +142,7 @@
 					<dt>총금액</dt>
 					<dd>
 						<div class='total_price'>
-							<span class='no'>{{ priceAdult.toLocaleString() }}</span>원
+							<span class='no'>{{ priceAdultStr }}</span>원
 						</div>
 						<div class='guide_txt'>유류할증료&amp;제세공과금 포함</div>
 					</dd>
