--- a/views/main/index.html
+++ b/views/main/index.html
@@ -11,7 +11,6 @@
 
 
 {% block content %}  
-
 <!-- swiper 영역 S -->
 <section class="swiper">
     <div class="swiper-container">
@@ -37,8 +36,8 @@
    <!-- 예약/ 1대1 문의 S -->
 <div class="quick_bar">
   <ul>
+  <li><a href="/travel" class ="qna">여행상품보기</a></li>
   <li><a href="/chat" class="go_reserve">동행 구하기</a></li>
-  <li><a href="" class ="qna">1:1문의</a></li>
 </ul>
 </div>
   <!-- 예약/ 1대1 문의 E -->
