--- a/views/menu/_main.html
+++ b/views/menu/_main.html
@@ -1,15 +1,17 @@
 <!-- 메인 메뉴  -->
 
+	
 <div class='logo_search'>
 	<div class='search'>
 		<form method='get' action='/board/search' autocomplete='off'>
 			<input type='hidden' name='sopt' value='all'>
-			<input type='text' name='skey' value='{{ skey }}' placeholder='검색어 입력'>
+			<input type='text' name='skey' value='{{ skey }}' placeholder='게시판 검색어 입력'>
 			<input type='submit' value='검색' class='search_btn'>
 		</form>
 	</div>
 <!--// search -->
 </div>
+
 {% if mainMenu.length > 0 %}  
 <ul class ="main_menu">
     {% for item in mainMenu %}  
