--- a/public/css/style.css
+++ b/public/css/style.css
@@ -44,6 +44,13 @@ border-bottom: 1px solid #212121;}
 /** 레이아웃 */
 .layout_width { width: 1200px; margin: 0 auto; }
 
+/** 테이블 공통 */
+.table_rows { border-spacing: 0; padding: 0; width: 100%; }
+.table_rows th { background-color: #5e99cb; color: #ffffff; padding:10px; border-left: 1px solid #ffffff; }
+.table_rows tr th:first-child { border-left: 0; }
+.table_rows td { padding: 10px; border-bottom: 1px solid #d5d5d5; }
+
+
 /* 메인 헤더 공통 */
 .nav  {  background-color: 
     #dedcd7; padding : 10px;}
@@ -134,8 +141,17 @@ font-size: 20px;}
 
 
 /** 메인페이지 검색 */
- .logo_search .search { float: right; width: 350px; margin-top: 5px;}
+ .logo_search .search { float: right; width: 350px; }
  .logo_search:after { clear: both; content: ''; display: block; }
  .logo_search .search input[type='text'] { width: calc(100% - 60px); float: left; border: 3px solid #000000; border-radius: 0; }
  .logo_search .search_btn { width: 60px; display: block; float: right; height: 40px; background-color: #000000; color: #ffffff; border: 0; cursor: pointer; } 
  .logo_search .search:after { clear: both; content: ''; display: block; }
+ .main_header { text-align: center; margin-top:10px; font-weight: 600; font-size: 16px;}
+ .main_header .xi-flight-takeoff { font-size: 18px;}
+
+
+ /** 마이페이지 */
+ .mypage { text-align: center;}
+ .mypage a { padding:0 20px; font-size: 16px; font-weight: 600;}
+ .mypage a:first-child { border-right: 2px solid #d5d5d5;}
+ .traveler { display: block; margin: 20px auto;}
