--- a/public/css/travel.css
+++ b/public/css/travel.css
@@ -3,7 +3,7 @@
 .body_travel .top_box .goods_info { float: right; width: calc(100% - 710px); position: relative; height: 449px; }
 .body_travel .top_box:after { clear: both; content: ''; display: block; }
 
-.body_travel .top_box .images img { width: 100%; display: block; }
+.body_travel .top_box .images img { width: 100%; display: block; height: 449px; }
 .body_travel .top_box .images .goods_cd { margin-top: 20px;  font-size: 13px; font-weight: 400; color: #666; line-height: 26px; }
 .body_travel .top_box .images .goods_cd strong { margin-left: 10px; font-weight: 900; }
 
@@ -27,7 +27,7 @@
 .body_travel .bottom_box:after { clear: both; content: ''; display: block; }
 .body_travel .bottom_box .description img { max-width: 870px; }
 
-.body_travel .top_box .swiper-pagination-fraction {  bottom: 20px !important; padding-right: 40px; background:rgba(0, 0, 0, 0.5); color: #ffffff; display: inline-block !important; width: auto !important; height: 30px; padding: 0 15px !important; line-height: 30px; border-radius: 7px; left: auto;  right: 20px; }
+.body_travel .top_box .swiper-pagination-fraction {  bottom: 270px !important; padding-right: 40px; background:rgba(0, 0, 0, 0.5); color: #ffffff; display: inline-block !important; width: auto !important; height: 30px; padding: 0 15px !important; line-height: 30px; border-radius: 7px; left: auto;  right: 20px; }
 
 .body_travel .navi { font-size: 50px; position: absolute; z-index: 5; top: 200px; cursor: pointer; color: #ffffff; }
 .body_travel .navi.next { right: 0; }
@@ -99,4 +99,19 @@
 .body_travel_reservation .summary .txt { font-size: 13px; color: #666666; text-align: right; }
 
 
-.body_travel_reservation .apply_reservation { background-color: #e5236d; height: 56px; line-height: 56px; width: 100%; color: #ffffff; font-size: 17px; cursor: pointer; text-align: center; border-radius: 7px; margin-top: 20px; }
+.body_travel_reservation .apply_reservation, .body_travel_reservation .apply_cancel { background-color: #e5236d; height: 56px; line-height: 56px; width: 100%; color: #ffffff; font-size: 17px; cursor: pointer; text-align: center; border-radius: 7px; margin-top: 20px; border: 0; }
+
+
+/* travel/index.html */
+.travel_goods_list li:first-child {  border-top: 1px solid #d5d5d5; } 
+.travel_goods_list li { padding: 25px 0; border-bottom: 1px solid #d5d5d5; }
+.travel_goods_list li  .images { float: left; width: 200px; height: 200px; margin-right: 20px; }
+.travel_goods_list li  .goods_info { float: left; width: calc(100% - 220px); position: relative; }
+.travel_goods_list li:after { clear: left; content: ''; display: block; }
+.travel_goods_list li  .goods_info .price { position: absolute; right: 0; font-size: 17px; color: #111111;}
+.travel_goods_list li  .goods_info .price .no { font-size: 22px; color: #111111; font-weight: bold; }
+
+.travel_goods_list .list_goods_nm { font-size: 20px; color: #111111; font-weight: bold; line-height: 30px; }
+.travel_goods_list .short_desc { font-size: 14px; line-height: 21px; border-bottom: 0 !important; }
+.travel_goods_list .extra_info { font-size: 14px; color: #111111; margin-bottom: 5px; }
+.travel_goods_list .extra_info i { font-size; 20px; }
