--- a/views/member/form.html
+++ b/views/member/form.html
@@ -6,7 +6,11 @@
 	{% if naverProfile.id %}
 	<h1>네이버 아이디로 회원 가입</h1>
 	{% endif %}
+	{% if isLogin %} 
+	<h1>Edit profile</h1>
+	{% else %}
 	<h1>JOIN</h1>
+	{% endif %}
 	<dl>
 		<dt>아이디</dt>
 		{% if isLogin %}  
