--- a/views/travel/view.html
+++ b/views/travel/view.html
@@ -1,5 +1,217 @@
-{% extends "../layout.html" %}  
-
-{% block content %} 
-여행 예약 조회
-{% endblock %}  
+{% extends '../layout.html' %}
+{% block content %}
+<div class='layout_width'>
+	<div class='main_tit'>예약확인</div>
+	<form name='frmReservation' method='post' action='/travel/reservation/cancel' target='ifrmHidden' autocomplete='off'>
+	<div class='content_wrap'>
+		<div class='main_contents'>
+			<input type='hidden' name='idx' value='{{ idx }}'>
+			
+			<div class='sub_tit'>{{ goodsNm }}</div>
+			<table>
+				<tr>
+					<th>예약일시</th>
+					<td>{{ regDt }}</td>
+				</tr>
+				<tr>
+					<th>예약상태</th>
+					<td>{{ status }}</td>
+				</tr>
+				<tr>
+					<th>여행기간</th>
+					<td>
+						{{ period }}
+					</td>
+				</tr>
+				<tr>
+					<th>교통편</th>
+					<td>
+						{% if transportation == 'airline_domestic' or transportation == 'airline_inter' %}
+						<i class='xi-airplane'></i>
+						{% elseif transportation == 'ship_domestic' or transportation == 'ship_inter' %}
+						<i class='xi-ship'></i>
+						{% elseif transportation == 'train' %}
+						<i class='xi-train'></i>
+						{% else %}
+						<i class='xi-bus'></i>
+						{% endif %}
+						<span class='text'>
+						{% if transportation == 'airline_domestic' or transportation == 'ship_domestic' %} 
+							국내선
+						{% elseif transportation == 'airline_inter' or transportation == 'ship_inter' %}
+							국제선				
+						{% elseif transportation == 'train' %}
+							기차
+						{% else %}
+							버스
+						{% endif %}
+						</span>
+					</td>
+				</tr>
+			</table>
+			
+			<div class='sub_tit'>예약자 정보</div>
+			<table>
+				<tr>
+					<th>이름</th>
+					<td width='287'>
+						{{ name }}
+					</td>
+					<th>생년월일</th>
+					<td>
+						{{ birth }}
+					</td>
+				</tr>
+				<tr>
+					<th>이메일</th>
+					<td>
+						{{ email }}
+					</td>
+					<th>휴대폰번호</th>
+					<td>
+						{{ cellPhone }}
+					</td>
+				</tr>
+			</table>
+			
+			<div class='sub_tit'>인원정보</div>
+			<ul class='reservation_persons'>
+				<li class='box adult'>
+					<div class='t1'>
+						<span>성인</span>
+						만 13세 이상 
+					</div>
+					
+					<div class='no_of_persons'>{{ adult }}명</div>
+					
+					<div class='tot_price'><span class='no'>{{ totalPriceAdult }}</span>원</div>
+					
+					<!--// goods_cnt_wrap -->
+				</li>
+				
+				<li class='box child' data-price='{{ priceChild }}'>
+					<div class='t1'>
+						<span>아동</span>
+						만 13세 미만
+					</div>
+					
+					<div class='no_of_persons'>{{ child }}명</div>
+					
+					<div class='tot_price'><span class='no'>{{ totalPriceChild }}</span>원</div>
+					
+					<!--// goods_cnt_wrap -->
+				</li>
+				
+				<li class='box infant'>
+					<div class='t1'>
+						<span>유아</span>
+						만 2세 미만
+					</div>
+					
+					<div class='no_of_persons'>{{ infant }}명</div>
+					
+					<div class='tot_price'>-</div>
+					
+					<!--// goods_cnt_wrap -->
+				</li>
+				
+			</ul>
+			
+			<div class='sub_tit'>여행자 정보</div>
+			{% for type in personTypes %}
+			{% for item in persons[type] %}
+			<div class='person_info'>
+				<div class='sub_tit2'>
+				{% if type == 'adult' %}
+				성인
+				{% elseif type == 'child' %}
+				아동
+				{% else %}
+				유아
+				{% endif %}
+				{{ loop.index }}
+				</div>
+				<table>
+					<tr>
+						<th>성명(한글)</th>
+						<td colspan='3'>
+							{{ item.travelerNm }}
+						</td>
+					</tr>
+					<tr>
+						<th>생년월일</th>
+						<td>
+							{{ item.travelerBirth }}
+						</td>
+						<th>성별</th>
+						<td>
+							{{ item.travelerGender }}
+						</td>
+					</tr>
+					{% if type == 'adult' %}
+					<tr>
+						<th>휴대폰 번호</th>
+						<td>
+							{{ item.travelerCellPhone }}
+						</td>
+						<th>이메일</th>
+						<td>
+							{{ item.travelerEmail }}
+						</td>
+					</tr>
+					{% endif %}
+				</table>
+			</div>
+			{% endfor %}
+			{% endfor %}
+			
+			
+			
+			<div class='reservation_guide'>
+				<div class='tit'><i class='xi-info-o'></i> 예약 시 유의사항</div>
+				<ul>
+					<li>여행 관련 변경사항 발생 시 안내 드리고자 만 19세 이상의 모든 여행자는 휴대폰번호를 필수로 입력하셔야 합니다.</li>
+					<li>
+						휴대폰이 없으실 경우 연락 가능한 보호자의 휴대폰번호를 입력해 주시기 바랍니다.<br>
+						(단, 동일 예약번호 내 동일한 이메일 및 휴대폰번호 입력 불가)
+					<li>
+					<li>
+						하나투어마일리지®는 출발일 전 하나투어클럽에 가입하신 여행자에게만 적립됩니다. (출발일+7일 후 적립)
+					</li>
+					<li>여행자 정보는 예약/결제 후 예약내역에서 모두 입력해 주셔야 합니다.</li>
+					<li>현지합류 인원추가 시 추가 된 인원의 인원 정보를 등록해주셔야 합니다.</li>
+					<li>유아요금은 성인 2인과 같은 방 사용조건이며, 미충족 시 유아추가 요금이 발생합니다.</li>
+					<li>유류할증료 및 제세공과금은 유가와 환율에 따라 변동될 수 있습니다.</li>
+					<li>1인 객실 사용시 추가요금 발생</li>
+					<li>현지합류 상품은 해당 결제금액에 따라 마일리지 적립이 별도로 지급됩니다. (특별적립 제외)</li>
+				</ul>
+			</div>
+		</div>
+		<div class='summary'>
+			<div class='inner'>
+				<div class='sub_tit'>결제상세내역</div>
+				<div class='summary_info'>
+					<dl class='top'>
+						<dt>최종결제금액</dt>
+						<dd>
+							성인 <span class='adult_cnt'>{{ adult }}</span> 
+							아동 <span class='child_cnt'>{{ child }}</span>
+							유아 <span class='infant_cnt'>{{ infant }}</span>
+						</dd>
+					</dl>
+					<div class='total_price'><span class='no'>{{  totalPrice }}</span>원</div>
+					<div class='txt'>유류할증료&amp;제세공과금 포함</div>
+				</div>
+				<!--// summary_info -->
+				{% if isCancelable %}
+				<input type='submit' class='apply_cancel' value='예약 취소하기' onclick="return confirm('정말 취소하시겠습니까?');">
+				{% endif %}
+			</div>
+			<!--// inner -->
+		</div>
+		<!--// summary -->
+	</div>
+	<!--// content_wrap -->
+	</form>
+</div>
+{% endblock %}
