--- a/public/css/style.css
+++ b/public/css/style.css
@@ -117,7 +117,7 @@ font-size: 20px;}
 
 
 /* 회원가입 / 로그인 폼 */
-#join_form { width: 500px; margin:0 auto; margin-top:50px; 
+#join_form { width: 530px; margin:0 auto; margin-top:50px; 
     border: 2px solid #dedcd7; padding: 20px;}
 #join_form h1 {text-align: center;}
 .login_method { text-align: center;}
@@ -155,3 +155,17 @@ font-size: 20px;}
  .mypage a { padding:0 20px; font-size: 16px; font-weight: 600;}
  .mypage a:first-child { border-right: 2px solid #d5d5d5;}
  .traveler { display: block; margin: 20px auto;}
+
+ /* 아이디/ 비밀번호 찾기 */
+.findid_links { text-align: center;}
+
+/* 메인 하단 게시판 이미지 리스트 */
+.mainboard_image li { float: left; width: calc(100% / 4 - 12px); margin-right: 15px;
+    margin-bottom: 20px; margin-top:20px;}
+.mainboard_image:after{clear:left; content: ""; display: block;}
+.mainboard_image li:nth-child(4n+1) { margin-right: 0;}
+.mainboard_image li:nth-child(4n) { }
+.mainboard_image li img { width: 100%; height:250px; margin-bottom: 10px;}
+.mainboard_image .title { font-size: 15px; font-weight: bold; line-height: 1.5; height: 44px;
+    overflow: hidden; word-break: break-all; margin-bottom: 10px;}
+.mainboard_image h2 { text-align: center; margin-top: 30px;}    
