--- a/views/main/index.html
+++ b/views/main/index.html
@@ -11,6 +11,8 @@
 
 
 {% block content %}  
+
+
 <!-- swiper 영역 S -->
 <section class="swiper">
     <div class="swiper-container">
@@ -32,6 +34,8 @@
     </div>
  </section>
   <!-- swiper 영역 E -->
+
+  {% include 'main/_latest_photo.html' %}
 
    <!-- 예약/ 1대1 문의 S -->
 <div class="quick_bar">
