--- a/public/css/board.css
+++ b/public/css/board.css
@@ -133,3 +133,17 @@ resize: none; padding:10px; border-radius: 5px; margin-top:10px;}
 .search_page .search input[type='text'] { width:calc(100% - 230px);}
 .search_page .search .search_btn { width: 100px; border:0; background-color: #000000; color:#ffffff;
 border-radius: 3px; cursor: pointer; height: 38px;}
+
+
+/* gallery/_list.html */
+.board_gallery .post_gallery_list li { float: left; width: calc(100% / 4 - 12px); margin-left: 15px;
+margin-bottom: 20px;}
+.board_gallery .post_gallery_list:after{clear:left; content: ""; display: block;}
+.board_gallery .post_gallery_list li:nth-child(4n+1) { margin-left: 0;}
+.board_gallery .post_gallery_list .images { width: 100%; height:230px; margin-bottom: 10px;}
+.board_gallery .post_gallery_list .title { font-size: 15px; font-weight: bold; line-height: 1.5; height: 44px;
+overflow: hidden; word-break: break-all; margin-bottom: 10px;}
+
+.board_gallery .post_gallery_list .post_info .poster { float: left;}
+.board_gallery .post_gallery_list .post_info .date {float:right;}
+.board_gallery .post_gallery_list .post_info { clear:both; display: block; content: "";} 
