--- a/views/mypage/index.html
+++ b/views/mypage/index.html
@@ -5,7 +5,7 @@
 
 <div class="mypage">
 <a href="/mypage/reservation">나의 예약정보 확인</a>
-<a href="/member/update">회원정보 수정</a>
+<a href="/mypage/myinfo">회원정보 수정</a>
 </div>
 <img src ="img/traveler.jpg" class ="traveler">
 {% endblock %}  
