--- a/views/board/main.html
+++ b/views/board/main.html
@@ -5,7 +5,7 @@
 {% endblock %}  
 
 {% block content %}  
-<div class="board_main">
+<div class="board_main layout_width">
    
         <a href="/board/list/서유럽">
           <div class="photo">
