--- a/views/main/_latest_photo.html
+++ b/views/main/_latest_photo.html
@@ -3,7 +3,7 @@
 {% if tmp.length > 0 %}
 
 <ul class ="mainboard_image layout_width">
-	<h2>동남아시아 여행후기 게시판</h2>
+	<div class ="main_title">동남아시아 여행후기 게시판</div>
 	{% for item in tmp %}
 	<li>
 		<a href='/board/view/{{ item.idx }}'>
