--- a/public/css/style.css
+++ b/public/css/style.css
@@ -159,13 +159,15 @@ font-size: 20px;}
  /* 아이디/ 비밀번호 찾기 */
 .findid_links { text-align: center;}
 
-/* 메인 하단 게시판 이미지 리스트 */
+/* 메인페이지  하단 게시판 이미지 리스트 */
 .mainboard_image li { float: left; width: calc(100% / 4 - 12px); margin-right: 15px;
-    margin-bottom: 20px; margin-top:20px;}
+    margin-bottom: 20px; margin-top:30px;}
 .mainboard_image:after{clear:left; content: ""; display: block;}
 .mainboard_image li:nth-child(4n+1) { margin-right: 0;}
-.mainboard_image li:nth-child(4n) { }
 .mainboard_image li img { width: 100%; height:250px; margin-bottom: 10px;}
 .mainboard_image .title { font-size: 15px; font-weight: bold; line-height: 1.5; height: 44px;
     overflow: hidden; word-break: break-all; margin-bottom: 10px;}
-.mainboard_image h2 { text-align: center; margin-top: 30px;}    
+.mainboard_image .main_title { margin: 0 auto; margin-top: 50px; font-size: 16px; border:1px solid black;
+background-color:white; color:black; width: 230px; text-align: center; height: 40px; line-height: 38px; 
+border-radius: 5px;}
+.mainboard_image .main_title:hover{ background-color: black; color:white;}    
