--- a/views/layout.html
+++ b/views/layout.html
@@ -56,6 +56,6 @@
     {% include "outline/footer/_main.html" %} 
     {% endblock %}  
     </footer>
-    <iframe name ="ifrmHidden" width = "100%" height="500"  frameborder="0"></iframe>
+    <iframe name ="ifrmHidden" width = "100%" height="500"  frameborder="0" style="display: none;"></iframe>
 </body>
 </html>
