--- a/public/css/board.css
+++ b/public/css/board.css
@@ -91,8 +91,8 @@ border:0; cursor: pointer; height: 28px; padding:0 20px; border-radius: 3px;}
 
 
 
-@media (max-width: 800px) {
-    .board_main a { width: calc(100% / 2); margin-left: 0;}
+@media (max-width: 700px) {
+    .board_main a { width: calc(100% / 2); text-align: center; }
     
 }
 
