--- a/views/board/password.html
+++ b/views/board/password.html
@@ -1,6 +1,6 @@
 {% extends '../layout.html' %}
 {% block content %}
-<form method='post' action="/board/{{ 'comment/' if isComment }}password/{{ idx }}"  autocomplete='off'>
+<form id ="join_form" method='post' action="/board/{{ 'comment/' if isComment }}password/{{ idx }}"  autocomplete='off'>
 	<dl>
 		<dt>비밀번호</dt>
 		<dd>
